# ExoBrainTon

./: README.md
ROBOTIS-THORMANG-Common/thormang3_common/: CHANGELOG.rst  CMakeLists.txt  package.xml
ROBOTIS-THORMANG-Common/thormang3_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
ROBOTIS-THORMANG-Common/thormang3_description/calibration/: multisensor_head_calibration.urdf.xacro
ROBOTIS-THORMANG-Common/thormang3_description/doc/: robotis_thormang3.xlsx
ROBOTIS-THORMANG-Common/thormang3_description/launch/: load_robot_description.launch  thor_laserscan.launch  thormang3.rviz  thormang3_display.rviz  thormang3_mpc.launch  thormang3_opc.launch  thormang3_rviz.launch  xacrodisplay_common.launch
ROBOTIS-THORMANG-Common/thormang3_description/meshes/: l_leg_an_p_link.STL  l_leg_an_r_link.STL  l_leg_hip_p_link.STL  l_leg_hip_r_link.STL  l_leg_hip_y_link.STL  l_leg_kn_p_link.STL  pelvis_link.STL  r_leg_an_p_link.STL  r_leg_an_r_link.STL  r_leg_hip_p_link.STL  r_leg_hip_r_link.STL  r_leg_hip_y_link.STL  r_leg_kn_p_link.STL
ROBOTIS-THORMANG-Common/thormang3_description/robots/: exo_ros_33.xacro
ROBOTIS-THORMANG-Common/thormang3_description/rviz/: xacrodisplay.rviz
ROBOTIS-THORMANG-Common/thormang3_description/src/: thormang3_rviz_pub.cpp
ROBOTIS-THORMANG-Common/thormang3_description/urdf/: materials.xacro  thormang3.gazebo  thormang3.structure.arm.xacro  thormang3.structure.head.xacro  thormang3.structure.leg.xacro  thormang3.structure.torso.xacro  thormang3.xacro
ROBOTIS-THORMANG-Common/thormang3_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
ROBOTIS-THORMANG-Common/thormang3_gazebo/config/: position_controller.yaml
ROBOTIS-THORMANG-Common/thormang3_gazebo/launch/: position_controller.launch  robotis_world.launch
ROBOTIS-THORMANG-Common/thormang3_gazebo/src/: gazebo_grip_pub.cpp
ROBOTIS-THORMANG-Common/thormang3_gazebo/worlds/: empty.world
ROBOTIS-THORMANG-MPC/ati_ft_sensor/: CHANGELOG.rst  CMakeLists.txt  package.xml
ROBOTIS-THORMANG-MPC/ati_ft_sensor/include/ati_ft_sensor/: ati_force_torque_sensor.h  ati_force_torque_sensor_twe.h
ROBOTIS-THORMANG-MPC/ati_ft_sensor/src/: ati_force_torque_sensor_twe.cpp
ROBOTIS-THORMANG-MPC/changer/: CMakeLists.txt  package.xml
ROBOTIS-THORMANG-MPC/changer/cfg/: MyParam.cfg
ROBOTIS-THORMANG-MPC/changer/include/changer/: changer.h
ROBOTIS-THORMANG-MPC/changer/src/: changer.cpp
ROBOTIS-THORMANG-MPC/thormang3_action_module/: CHANGELOG.rst  CMakeLists.txt  package.xml
ROBOTIS-THORMANG-MPC/thormang3_action_module/include/thormang3_action_module/: action_file_define.h  action_module.h
ROBOTIS-THORMANG-MPC/thormang3_action_module/src/: action_module.cpp
ROBOTIS-THORMANG-MPC/thormang3_balance_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
ROBOTIS-THORMANG-MPC/thormang3_balance_control/include/thormang3_balance_control/: thormang3_balance_control.h
ROBOTIS-THORMANG-MPC/thormang3_balance_control/src/: thormang3_balance_control.cpp
ROBOTIS-THORMANG-MPC/thormang3_base_module/: CHANGELOG.rst  CMakeLists.txt  package.xml
ROBOTIS-THORMANG-MPC/thormang3_base_module/include/thormang3_base_module/: base_module.h  base_module_state.h
ROBOTIS-THORMANG-MPC/thormang3_base_module/src/: base_module.cpp  base_module_state.cpp
ROBOTIS-THORMANG-MPC/thormang3_feet_ft_module/: CHANGELOG.rst  CMakeLists.txt  package.xml
ROBOTIS-THORMANG-MPC/thormang3_feet_ft_module/include/thormang3_feet_ft_module/: feet_force_torque_sensor_module.h
ROBOTIS-THORMANG-MPC/thormang3_feet_ft_module/src/: feet_force_torque_sensor_module.cpp
ROBOTIS-THORMANG-MPC/thormang3_gripper_module/: CHANGELOG.rst  CMakeLists.txt  package.xml
ROBOTIS-THORMANG-MPC/thormang3_gripper_module/include/thormang3_gripper_module/: gripper_module.h
ROBOTIS-THORMANG-MPC/thormang3_gripper_module/src/: gripper_module.cpp
ROBOTIS-THORMANG-MPC/thormang3_head_control_module/: CHANGELOG.rst  CMakeLists.txt  package.xml
ROBOTIS-THORMANG-MPC/thormang3_head_control_module/include/thormang3_head_control_module/: head_control_module.h
ROBOTIS-THORMANG-MPC/thormang3_head_control_module/src/: head_control_module.cpp
ROBOTIS-THORMANG-MPC/thormang3_kinematics_dynamics/: CHANGELOG.rst  CMakeLists.txt  package.xml
ROBOTIS-THORMANG-MPC/thormang3_kinematics_dynamics/include/thormang3_kinematics_dynamics/: kinematics_dynamics.h  (+2 more)
ROBOTIS-THORMANG-MPC/thormang3_kinematics_dynamics/src/: kinematics_dynamics.cpp  link_data.cpp
ROBOTIS-THORMANG-MPC/thormang3_manager/: CHANGELOG.rst  CMakeLists.txt  package.xml
ROBOTIS-THORMANG-MPC/thormang3_manager/config/: THORMANG3.robot  dr.yaml  dxl_init.yaml  gazebo_THORMANG3.robot
ROBOTIS-THORMANG-MPC/thormang3_manager/launch/: change_param.yaml  directo.launch  directo1.launch   dr.launch  manager_exo.launch  rqt_rec.launch  thormang3_manager.launch  thormang3_manager_gazebo.launch
ROBOTIS-THORMANG-MPC/thormang3_manager/src/: thormang3_manager.cpp
ROBOTIS-THORMANG-MPC/thormang3_manipulation_module/: CHANGELOG.rst  CMakeLists.txt  package.xml
ROBOTIS-THORMANG-MPC/thormang3_manipulation_module/src/: manipulation_module.cpp
ROBOTIS-THORMANG-MPC/thormang3_mpc/: CHANGELOG.rst  CMakeLists.txt  package.xml
ROBOTIS-THORMANG-MPC/thormang3_walking_module/: CHANGELOG.rst  CMakeLists.txt  package.xml
ROBOTIS-THORMANG-MPC/thormang3_walking_module/config/: balance_offset.yaml  motorConfigExo.yaml
ROBOTIS-THORMANG-MPC/thormang3_walking_module/src/: thormang3_online_walking.cpp  walking_module.cpp  walking_module_backup.cpp  walking_module_dbg.cpp
ROBOTIS-THORMANG-OPC/thormang3_foot_step_generator/: CHANGELOG.rst  CMakeLists.txt  package.xml
ROBOTIS-THORMANG-OPC/thormang3_foot_step_generator/src/: main.cpp  message_callback.cpp  robotis_foot_step_generator.cpp
ROBOTIS-THORMANG-OPC/thormang3_offset_tuner_client/: CHANGELOG.rst  CMakeLists.txt  package.xml
ROBOTIS-THORMANG-OPC/thormang3_offset_tuner_client/config/: joint_data.yaml
ROBOTIS-THORMANG-OPC/thormang3_offset_tuner_client/src/: main.cpp  main_window.cpp  qnode.cpp
ROBOTIS-THORMANG-OPC/thormang3_offset_tuner_client/ui/: main_window.ui
(+205 files in other folders)
