<?xml version="1.0"?>
<package>
  <name>thormang3_balance_control</name>
  <version>0.1.3</version>
  <description>
    The thormang3_balance_control package
    This balance control is based on PD control.
  </description>
  <license>BSD</license>
  <author email="hjsong@robotis.com">Jay Song</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-MPC/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-MPC</url>
  <url type="website">http://wiki.ros.org/thormang3_balance_control</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>robotis_math</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>robotis_math</run_depend>
</package>
