<?xml version="1.0"?>
<package>
  <name>thormang3_feet_ft_module</name>
  <version>0.1.3</version>
  <description>
    This package is a sensor module for force torque sensors on feet.
  </description>
  <license>BSD</license>
  <author email="zerom@robotis.com">Zerom</author>
  <author email="hjsong@robotis.com">Jay Song</author>
  <author email="sch@robotis.com">SCH</author>
  <author email="kmjung@robotis.com">Kayman</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-MPC/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-MPC</url>
  <url type="website">http://wiki.ros.org/thormang3_feet_ft_module</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>robotis_math</build_depend>
  <build_depend>robotis_controller_msgs</build_depend>
  <build_depend>robotis_framework_common</build_depend>
  <build_depend>thormang3_kinematics_dynamics</build_depend>
  <build_depend>thormang3_feet_ft_module_msgs</build_depend>
  <build_depend>ati_ft_sensor</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>robotis_math</run_depend>
  <run_depend>robotis_controller_msgs</run_depend>
  <run_depend>robotis_framework_common</run_depend>
  <run_depend>thormang3_kinematics_dynamics</run_depend>
  <run_depend>thormang3_feet_ft_module_msgs</run_depend>
  <run_depend>ati_ft_sensor</run_depend>
  <run_depend>yaml-cpp</run_depend>
</package>
